--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -1670,7 +1670,14 @@
       }
     },
     "Darock 会收集必要的诊断信息以便进行改进，信息不会关联到您个人。如果您不愿意被收集信息，请勿发送。" : {
-
+      "localizations" : {
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Darock將收集必要的診斷信息以便進行改進，信息不會關聯到您個人。如果您不願意被收集信息，請勿發送。"
+          }
+        }
+      }
     },
     "Darock-studio" : {
       "localizations" : {
@@ -6917,6 +6924,12 @@
             "state" : "translated",
             "value" : "无法连接互联网"
           }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "無法連接網際網路"
+          }
         }
       }
     },
@@ -6938,6 +6951,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "重新检查"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "重新檢查"
           }
         }
       }
@@ -6961,12 +6980,24 @@
             "state" : "translated",
             "value" : "正在检查…"
           }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "正在檢查..."
+          }
         }
       }
     },
     "UID: %@" : {
       "localizations" : {
         "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "UID: %@"
+          }
+        },
+        "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
             "value" : "UID: %@"
@@ -6992,6 +7023,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "正在检查更新…"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "正在檢查更新…"
           }
         }
       }
@@ -7117,6 +7154,12 @@
             "state" : "translated",
             "value" : "喵哩喵哩已是最新版本"
           }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "喵哩喵哩已經是最新版本了"
+          }
         }
       }
     },
@@ -7135,6 +7178,12 @@
           }
         },
         "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "我的收藏"
+          }
+        },
+        "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
             "value" : "我的收藏"
@@ -7161,6 +7210,12 @@
             "state" : "translated",
             "value" : "历史记录"
           }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "歷史記錄"
+          }
         }
       }
     },
@@ -7182,6 +7237,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "离线缓存"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "離線緩存"
           }
         }
       }
@@ -7205,6 +7266,12 @@
             "state" : "translated",
             "value" : "关注帐户"
           }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "關注帳戶"
+          }
         }
       }
     },
@@ -7226,6 +7293,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "切换账户"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "切換帳戶"
           }
         }
       }
@@ -7249,6 +7322,12 @@
             "state" : "translated",
             "value" : "添加账户"
           }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "添加賬戶"
+          }
         }
       }
     },
@@ -7271,6 +7350,12 @@
             "state" : "translated",
             "value" : "右滑删除不会退出登录。"
           }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "右滑刪除不會退出登錄。"
+          }
         }
       }
     },
@@ -7292,6 +7377,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "轻点以切换账户，账户切换时不会立即在页面中刷新。轻点以此足矣。"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "輕點以切換賬戶，賬戶切換時不會立即在頁面中刷新。輕點一次就足夠了。"
           }
         }
       }
@@ -7337,6 +7428,12 @@
             "state" : "translated",
             "value" : "轻点以登录"
           }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "輕點以登入"
+          }
         }
       }
     },
@@ -7358,6 +7455,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "稍后再看"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "稍後再看"
           }
         }
       }
@@ -7924,6 +8027,12 @@
             "state" : "translated",
             "value" : "稍后再看"
           }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "稍後再看"
+          }
         }
       }
     },
@@ -7942,6 +8051,12 @@
           }
         },
         "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "WindowsMEMZ"
+          }
+        },
+        "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
             "value" : "WindowsMEMZ"
@@ -8298,7 +8413,14 @@
 
     },
     "在iPhone上继续" : {
-
+      "localizations" : {
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "在iPhone上繼續"
+          }
+        }
+      }
     },
     "在使用本 App 前，您需要先知晓以下信息：\n· 本 App 由第三方开发者以及部分社区用户贡献，与哔哩哔哩无合作关系，哔哩哔哩是上海宽娱数码科技有限公司的商标。\n· 本 App 并不是哔哩哔哩的替代品，我们建议您在能够使用官方客户端时尽量使用官方客户端。\n· 本 App 均使用来源于网络的公开信息进行开发。\n· 本 App 中和B站相关的功能完全免费\n· 本 App 中所呈现的B站内容来自哔哩哔哩官方。\n· 本 App 的开发者、负责人和实际责任人是%@\n  联系QQ：3245146430" : {
       "localizations" : {
@@ -8819,7 +8941,14 @@
       }
     },
     "正在加密..." : {
-
+      "localizations" : {
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "正在加密..."
+          }
+        }
+      }
     },
     "清除历史记录" : {
 
