fix(FSR): Fixed Crash Issue

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -8350,6 +8350,9 @@
     "发送的反馈" : {
 
     },
+    "发送评论" : {
+
+    },
     "可选, 最多9个" : {
       "localizations" : {
         "en" : {
@@ -8404,6 +8407,9 @@
 
     },
     "回复 %lld" : {
+
+    },
+    "回复信息" : {
 
     },
     "回复内容" : {
