fix: fix assert when launch

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -9394,6 +9394,9 @@
         }
       }
     },
+    "请不要让Apple Watch熄屏，可以通过保持滚动表冠以使屏幕常亮" : {
+
+    },
     "超大" : {
       "extractionState" : "stale",
       "localizations" : {
@@ -9513,6 +9516,9 @@
           }
         }
       }
+    },
+    "顺便了解一些知识来打发时间吧！\n\n- 为什么要下载资源包？\n  喵哩喵哩通过资源包运行主要代码，这也就意味着您无需经常使用iPhone更新App。\n- 获取新功能的方法？\n  在设置->软件更新中可以更新资源包，无论iPhone是否在身边\n- 使用技巧？\n   - 保持良好的网络环境，最好不连接iPhone或在设置中关闭iPhone上的无线局域网与蓝牙\n   - 遇到问题在用户群内反馈效率最高\n   - 登录账号以获取最佳体验\n- 开源！\n  喵哩喵哩为开源项目，您可以在GitHub上找到我们的源代码" : {
+
     },
     "颜色" : {
       "extractionState" : "stale",
