feat: zipped dylib for networking

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -9165,6 +9165,9 @@
         }
       }
     },
+    "正在安装..." : {
+
+    },
     "清除所有已观看视频" : {
       "extractionState" : "stale",
       "localizations" : {
