feat: Decode article html on Apple Watch (not full)

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -9276,10 +9276,10 @@
     "输入错误" : {
 
     },
-    "退出" : {
+    "退出 App" : {
 
     },
-    "退出 App" : {
+    "退出播放" : {
 
     },
     "选择图片" : {
