fix: small issue

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -1688,6 +1688,7 @@
       }
     },
     "Darock 会收集必要的诊断信息以便进行改进，信息不会关联到您个人。如果您不愿意被收集信息，请勿发送。" : {
+      "extractionState" : "stale",
       "localizations" : {
         "zh-Hant" : {
           "stringUnit" : {
@@ -1696,6 +1697,9 @@
           }
         }
       }
+    },
+    "Darock 会收集必要的诊断信息以便进行改进。如果您不愿意被收集信息，请勿发送。" : {
+
     },
     "Darock-studio" : {
       "localizations" : {
@@ -8196,6 +8200,9 @@
     "分析与改进" : {
 
     },
+    "加群248036605查看群公告以申请解封" : {
+
+    },
     "动态" : {
       "localizations" : {
         "en" : {
@@ -8719,6 +8726,9 @@
           }
         }
       }
+    },
+    "您已被 Darock 永久封禁且在设备上施行" : {
+
     },
     "我的收藏" : {
       "localizations" : {
