fix: Update Alternative Destribution

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -345,8 +345,18 @@
         }
       }
     },
-    "%@ 频道" : {
+    "%@ 通道" : {
 
+    },
+    "%@(%@)" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "%1$@(%2$@)"
+          }
+        }
+      }
     },
     "%@MB / %@MB" : {
       "localizations" : {
@@ -9005,6 +9015,9 @@
           }
         }
       }
+    },
+    "注意！重装 App 并不会移除封禁且可能会导致识别 ID 更改，我们将无法为您解封" : {
+
     },
     "清除历史记录" : {
 
