--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -1407,6 +1407,9 @@
         }
       }
     },
+    "Alamofire\nLicensed under MIT license" : {
+
+    },
     "Bangumi" : {
       "localizations" : {
         "en" : {
@@ -2040,6 +2043,12 @@
           }
         }
       }
+    },
+    "Dynamic\nLicensed under Apache License 2.0" : {
+
+    },
+    "EFQRCode\nLicensed under MIT license" : {
+
     },
     "Error" : {
       "localizations" : {
@@ -3165,6 +3174,9 @@
       }
     },
     "ID: %@" : {
+
+    },
+    "libwebp\nLicensed under BSD-3-Clause license" : {
 
     },
     "Lightning-Lion" : {
@@ -4445,6 +4457,21 @@
         }
       }
     },
+    "SDWebImage\nLicensed under MIT license" : {
+
+    },
+    "SDWebImagePDFCoder\nLicensed under MIT license" : {
+
+    },
+    "SDWebImageSVGCoder\nLicensed under MIT license" : {
+
+    },
+    "SDWebImageSwiftUI\nLicensed under MIT license" : {
+
+    },
+    "SDWebImageWebPCoder\nLicensed under MIT license" : {
+
+    },
     "Search.%@" : {
       "localizations" : {
         "en" : {
@@ -5161,6 +5188,9 @@
         }
       }
     },
+    "SFSymbol\nLicensed under MIT license" : {
+
+    },
     "Show Debug Controls" : {
       "localizations" : {
         "en" : {
@@ -5490,6 +5520,12 @@
           }
         }
       }
+    },
+    "swift_qrcodejs\nLicensed under MIT license" : {
+
+    },
+    "SwiftyJSON\nLicensed under MIT license" : {
+
     },
     "ThreeManager785" : {
       "localizations" : {
