--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -1739,6 +1739,9 @@
         }
       }
     },
+    "DebugVPLD" : {
+
+    },
     "Dignite" : {
       "localizations" : {
         "en" : {
@@ -5541,6 +5544,12 @@
         }
       }
     },
+    "TLeft" : {
+
+    },
+    "TRight" : {
+
+    },
     "Troubleshoot" : {
       "localizations" : {
         "en" : {
@@ -7040,6 +7049,9 @@
           }
         }
       }
+    },
+    "UIDebug" : {
+
     },
     "Update.checking" : {
       "localizations" : {
@@ -9015,6 +9027,9 @@
           }
         }
       }
+    },
+    "正常" : {
+
     },
     "注意！重装 App 并不会移除封禁且可能会导致识别 ID 更改，我们将无法为您解封" : {
 
