feat: Added dynamic list for each user on watchOS. fix: URL scheme on iOS

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -7126,6 +7126,7 @@
       }
     },
     "Update.install-by-testflight" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "variations" : {
