feat: Added festivals celebration

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -518,6 +518,21 @@
         }
       }
     },
+    "🎉" : {
+
+    },
+    "🎉🎉🎉\n今天是 Darock 周年庆\n到我们群 248036605 参加活动吧！" : {
+
+    },
+    "🤡" : {
+
+    },
+    "🤡\n愚人节快乐！" : {
+
+    },
+    "🧨" : {
+
+    },
     "1.5x" : {
 
     },
@@ -1709,6 +1724,9 @@
       }
     },
     "Darock 会收集必要的诊断信息以便进行改进。如果您不愿意被收集信息，请勿发送。" : {
+
+    },
+    "Darock 祝您新年快乐！" : {
 
     },
     "Darock-studio" : {
