fix: Fixed comment trumb crash & favorites cannot load issue. opt: UI in UserDetail & Comments View & Dynamic View. feat: Supports view user's avator

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -518,6 +518,9 @@
         }
       }
     },
+    "🎂" : {
+
+    },
     "🎉" : {
 
     },
@@ -9095,6 +9098,9 @@
 
     },
     "状态" : {
+
+    },
+    "生日快乐，%@！" : {
 
     },
     "画面" : {
