feat: User relationships, storage management

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -257,6 +257,9 @@
         }
       }
     },
+    "%@ MB" : {
+
+    },
     "%@ 人在看" : {
       "localizations" : {
         "en" : {
@@ -1714,6 +1717,9 @@
           }
         }
       }
+    },
+    "Darock Studio" : {
+
     },
     "Darock 会收集必要的诊断信息以便进行改进，信息不会关联到您个人。如果您不愿意被收集信息，请勿发送。" : {
       "extractionState" : "stale",
@@ -8209,6 +8215,9 @@
     "使用恢复密钥" : {
 
     },
+    "储存空间" : {
+
+    },
     "允许收集使用信息" : {
 
     },
@@ -8493,6 +8502,9 @@
         }
       }
     },
+    "喵哩喵哩 (%@)" : {
+
+    },
     "喵哩喵哩为完整开源项目，欢迎检查代码以确认无隐私问题" : {
 
     },
@@ -8591,6 +8603,9 @@
     "如不希望显示来自 Darock 的推荐，可前往%@关闭" : {
 
     },
+    "媒体" : {
+
+    },
     "字号" : {
       "localizations" : {
         "en" : {
@@ -8645,6 +8660,16 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "小尾巴內容"
+          }
+        }
+      }
+    },
+    "已使用 %@ MB/%@ GB" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "已使用 %1$@ MB/%2$@ GB"
           }
         }
       }
@@ -9083,6 +9108,9 @@
         }
       }
     },
+    "正在载入" : {
+
+    },
     "正常" : {
 
     },
@@ -9115,6 +9143,9 @@
       }
     },
     "清除时间段" : {
+
+    },
+    "清除缓存" : {
 
     },
     "状态" : {
@@ -9205,6 +9236,9 @@
     "类型" : {
 
     },
+    "粉丝列表" : {
+
+    },
     "经验" : {
       "localizations" : {
         "en" : {
@@ -9226,6 +9260,9 @@
           }
         }
       }
+    },
+    "缓存" : {
+
     },
     "编辑" : {
 
