feat: Large suggestion view, fix: storage may crash

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -8256,6 +8256,9 @@
     "分析与改进" : {
 
     },
+    "列表视图" : {
+
+    },
     "加群248036605查看群公告以申请解封" : {
 
     },
@@ -8600,6 +8603,9 @@
         }
       }
     },
+    "大图视图" : {
+
+    },
     "如不希望显示来自 Darock 的推荐，可前往%@关闭" : {
 
     },
@@ -8664,15 +8670,8 @@
         }
       }
     },
-    "已使用 %@ MB/%@ GB" : {
-      "localizations" : {
-        "zh-Hans" : {
-          "stringUnit" : {
-            "state" : "new",
-            "value" : "已使用 %1$@ MB/%2$@ GB"
-          }
-        }
-      }
+    "已使用 %@ MB" : {
+
     },
     "已选择的图片" : {
       "localizations" : {
@@ -8885,6 +8884,12 @@
           }
         }
       }
+    },
+    "推荐视图" : {
+
+    },
+    "推荐视图样式" : {
+
     },
     "搜索" : {
 
@@ -9261,7 +9266,7 @@
         }
       }
     },
-    "缓存" : {
+    "缓存数据" : {
 
     },
     "编辑" : {
