feat: Third-party keyboard

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -4887,6 +4887,7 @@
       }
     },
     "Settings.feedback" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -8150,6 +8151,9 @@
     "下一步" : {
 
     },
+    "不支持全键盘的 Apple Watch 可通过打开此开关以使用第三方的全键盘" : {
+
+    },
     "二维码名片" : {
       "localizations" : {
         "en" : {
@@ -8217,6 +8221,9 @@
 
     },
     "使用恢复密钥" : {
+
+    },
+    "使用第三方全键盘" : {
 
     },
     "停止支持后，将不再为此版本系统提供功能性更新" : {
@@ -9166,6 +9173,9 @@
     "清除缓存" : {
 
     },
+    "热搜" : {
+
+    },
     "状态" : {
 
     },
@@ -9516,6 +9526,9 @@
       }
     },
     "错误/异常行为" : {
+
+    },
+    "键盘" : {
 
     },
     "降低亮度" : {
