--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -8274,6 +8274,9 @@
     "列表视图" : {
 
     },
+    "加载更多" : {
+
+    },
     "动态" : {
       "localizations" : {
         "en" : {
@@ -8909,6 +8912,9 @@
     "播放倍速" : {
 
     },
+    "播放卡住/无画面？" : {
+
+    },
     "文件保险箱" : {
 
     },
@@ -9487,6 +9493,9 @@
       }
     },
     "通知" : {
+
+    },
+    "重启 Apple Watch" : {
 
     },
     "重新载入" : {
