Fix keyboard issue

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -4479,6 +4479,7 @@
       }
     },
     "Search.%@" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
