Fixed crash issue

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -8843,7 +8843,7 @@
     "您已被 Darock 永久封禁且在设备上施行" : {
 
     },
-    "您的 Apple Watch 运行的 watchOS 已过时，喵哩喵哩将在 2024/6/10 之后停止支持" : {
+    "您的 Apple Watch 运行的 watchOS 已过时，喵哩喵哩已在 2024/6/10 停止支持" : {
 
     },
     "我的收藏" : {
