--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -500,6 +500,7 @@
       }
     },
     "+86" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -3397,6 +3398,7 @@
       }
     },
     "Login.step1.phone-number" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -8156,7 +8158,43 @@
     "下一步" : {
 
     },
+    "不丹 975" : {
+
+    },
     "不支持全键盘的 Apple Watch 可通过打开此开关以使用第三方的全键盘" : {
+
+    },
+    "中国台湾 886" : {
+
+    },
+    "中国大陆 86" : {
+
+    },
+    "中国澳门特别行政区 853" : {
+
+    },
+    "中国香港特别行政区 852" : {
+
+    },
+    "丹麦 45" : {
+
+    },
+    "乌克兰 380" : {
+
+    },
+    "乌兹别克斯坦 998" : {
+
+    },
+    "乌干达 256" : {
+
+    },
+    "乌拉圭 598" : {
+
+    },
+    "乍得 235" : {
+
+    },
+    "也门 967" : {
 
     },
     "二维码名片" : {
@@ -8182,6 +8220,9 @@
       }
     },
     "互联网" : {
+
+    },
+    "亚美尼亚 374" : {
 
     },
     "什么都木有" : {
@@ -8222,6 +8263,18 @@
         }
       }
     },
+    "以色列 972" : {
+
+    },
+    "伊拉克 964" : {
+
+    },
+    "伊朗 98" : {
+
+    },
+    "伯利兹 501" : {
+
+    },
     "使用“相机”App" : {
 
     },
@@ -8229,6 +8282,12 @@
 
     },
     "使用第三方全键盘" : {
+
+    },
+    "俄罗斯 7" : {
+
+    },
+    "保加利亚 359" : {
 
     },
     "停止支持后，将不再为此版本系统提供功能性更新" : {
@@ -8272,10 +8331,16 @@
         }
       }
     },
+    "冰岛 354" : {
+
+    },
     "分析与改进" : {
 
     },
     "列表视图" : {
+
+    },
+    "加拿大 1" : {
 
     },
     "加载更多" : {
@@ -8362,6 +8427,27 @@
           }
         }
       }
+    },
+    "匈牙利 36" : {
+
+    },
+    "南非 27" : {
+
+    },
+    "博茨瓦纳 267" : {
+
+    },
+    "印尼 62" : {
+
+    },
+    "印度 91" : {
+
+    },
+    "厄瓜多尔 593" : {
+
+    },
+    "厄立特里亚 291" : {
+
     },
     "历史记录" : {
       "localizations" : {
@@ -8460,6 +8546,9 @@
     "发送评论" : {
 
     },
+    "叙利亚 963" : {
+
+    },
     "可选, 最多9个" : {
       "localizations" : {
         "en" : {
@@ -8535,6 +8624,27 @@
     "回复内容" : {
 
     },
+    "图瓦卢 688" : {
+
+    },
+    "土库曼斯坦 993" : {
+
+    },
+    "土耳其 90" : {
+
+    },
+    "圣卢西亚 1784" : {
+
+    },
+    "圣多美和普林西比 239" : {
+
+    },
+    "圣皮埃尔和密克隆群岛 508" : {
+
+    },
+    "圣马力诺 378" : {
+
+    },
     "在App内反馈" : {
 
     },
@@ -8579,7 +8689,25 @@
     "在搜索页显示热搜" : {
 
     },
+    "坦桑尼亚 255" : {
+
+    },
     "垂下手腕时隐藏内容" : {
+
+    },
+    "塞内加尔 221" : {
+
+    },
+    "塞尔维亚 381" : {
+
+    },
+    "塞拉利昂 232" : {
+
+    },
+    "塞浦路斯 357" : {
+
+    },
+    "塞舌尔共和国 248" : {
 
     },
     "声音与触感" : {
@@ -8601,6 +8729,15 @@
           }
         }
       }
+    },
+    "多哥 228" : {
+
+    },
+    "多米尼加 1767" : {
+
+    },
+    "多米尼加代表 1809" : {
+
     },
     "大" : {
       "localizations" : {
@@ -8624,6 +8761,9 @@
     "如不希望显示来自 Darock 的推荐，可前往%@关闭" : {
 
     },
+    "委内瑞拉 58" : {
+
+    },
     "媒体" : {
 
     },
@@ -8643,7 +8783,13 @@
         }
       }
     },
+    "孟加拉国 880" : {
+
+    },
     "完成" : {
+
+    },
+    "密克罗尼西亚 691" : {
 
     },
     "密码" : {
@@ -8685,6 +8831,18 @@
         }
       }
     },
+    "尼加拉瓜 505" : {
+
+    },
+    "尼日利亚 234" : {
+
+    },
+    "尼日尔 227" : {
+
+    },
+    "尼泊尔 977" : {
+
+    },
     "已使用 %@ MB" : {
 
     },
@@ -8709,6 +8867,18 @@
           }
         }
       }
+    },
+    "布基纳法索 226" : {
+
+    },
+    "布隆迪 257" : {
+
+    },
+    "希腊 30" : {
+
+    },
+    "帕劳 680" : {
+
     },
     "应用" : {
       "localizations" : {
@@ -8790,6 +8960,9 @@
         }
       }
     },
+    "德国 49" : {
+
+    },
     "快进 10 秒" : {
 
     },
@@ -8840,6 +9013,9 @@
     "您的 Apple Watch 运行的 watchOS 已过时，喵哩喵哩将在 2024/6/10 之后停止支持" : {
 
     },
+    "意大利 39" : {
+
+    },
     "我的收藏" : {
       "localizations" : {
         "en" : {
@@ -8865,6 +9041,9 @@
     "所有历史记录" : {
 
     },
+    "所罗门群岛 677" : {
+
+    },
     "手记建议" : {
       "extractionState" : "stale",
       "localizations" : {
@@ -8876,7 +9055,13 @@
         }
       }
     },
+    "托克劳岛 690" : {
+
+    },
     "扩展的触感反馈" : {
+
+    },
+    "挪威 47" : {
 
     },
     "推荐" : {
@@ -8908,6 +9093,15 @@
 
     },
     "搜索" : {
+
+    },
+    "摩尔多瓦 373" : {
+
+    },
+    "摩洛哥 212" : {
+
+    },
+    "摩纳哥 377" : {
 
     },
     "播放" : {
@@ -8952,7 +9146,31 @@
         }
       }
     },
+    "文莱 673" : {
+
+    },
+    "斯威士兰 268" : {
+
+    },
+    "斯洛伐克 421" : {
+
+    },
+    "斯洛文尼亚 386" : {
+
+    },
+    "斯里兰卡 94" : {
+
+    },
+    "新加坡 65" : {
+
+    },
     "新建反馈" : {
+
+    },
+    "新西兰 64" : {
+
+    },
+    "日本 81" : {
 
     },
     "昨天和今天" : {
@@ -9043,6 +9261,9 @@
         }
       }
     },
+    "智利 56" : {
+
+    },
     "暂停->退出" : {
 
     },
@@ -9103,6 +9324,12 @@
     "标题" : {
 
     },
+    "格鲁吉亚 995" : {
+
+    },
+    "桑给巴尔岛 259" : {
+
+    },
     "模式" : {
       "localizations" : {
         "en" : {
@@ -9133,6 +9360,45 @@
 
     },
     "正常" : {
+
+    },
+    "比利时 32" : {
+
+    },
+    "毛里塔尼亚 222" : {
+
+    },
+    "毛里求斯 230" : {
+
+    },
+    "汤加 676" : {
+
+    },
+    "沙特阿拉伯 966" : {
+
+    },
+    "法国 33" : {
+
+    },
+    "法属圭亚那 594" : {
+
+    },
+    "法属波利尼西亚 689" : {
+
+    },
+    "法罗岛 298" : {
+
+    },
+    "波兰 48" : {
+
+    },
+    "波多黎各 1787" : {
+
+    },
+    "波黑 387" : {
+
+    },
+    "泰国 66" : {
 
     },
     "清除历史记录" : {
@@ -9166,10 +9432,40 @@
     "清除缓存" : {
 
     },
+    "澳大利亚 61" : {
+
+    },
     "热搜" : {
 
     },
+    "牙买加 1876" : {
+
+    },
+    "特克斯和凯科斯 1649" : {
+
+    },
+    "特立尼达和多巴哥 1868" : {
+
+    },
     "状态" : {
+
+    },
+    "玻利维亚 591" : {
+
+    },
+    "瑙鲁 674" : {
+
+    },
+    "瑞典 46" : {
+
+    },
+    "瑞士 41" : {
+
+    },
+    "瓦利斯群岛和富图纳群岛 1681" : {
+
+    },
+    "瓦努阿图 678" : {
 
     },
     "生日快乐，%@！" : {
@@ -9190,6 +9486,9 @@
           }
         }
       }
+    },
+    "直布罗陀 350" : {
+
     },
     "离线缓存" : {
       "localizations" : {
@@ -9212,6 +9511,12 @@
           }
         }
       }
+    },
+    "科特迪瓦 225" : {
+
+    },
+    "秘鲁 51" : {
+
     },
     "稍后再看" : {
       "localizations" : {
@@ -9251,6 +9556,9 @@
         }
       }
     },
+    "突尼斯 216" : {
+
+    },
     "简洁地描述问题" : {
 
     },
@@ -9258,6 +9566,18 @@
 
     },
     "粉丝列表" : {
+
+    },
+    "索马里 252" : {
+
+    },
+    "约旦 962" : {
+
+    },
+    "纳米比亚 264" : {
+
+    },
+    "纽埃岛 683" : {
 
     },
     "经验" : {
@@ -9282,13 +9602,58 @@
         }
       }
     },
+    "维珍群岛(美属) 1340" : {
+
+    },
+    "维珍群岛(英属) 1284" : {
+
+    },
+    "缅甸 95" : {
+
+    },
     "缓存数据" : {
 
     },
     "编辑" : {
 
     },
+    "美国 1" : {
+
+    },
+    "苏丹 249" : {
+
+    },
+    "苏里南 597" : {
+
+    },
+    "英国 44" : {
+
+    },
+    "莫桑比克 258" : {
+
+    },
+    "萨尔瓦多 503" : {
+
+    },
+    "萨摩亚，东部 684" : {
+
+    },
+    "萨摩亚，西部 685" : {
+
+    },
+    "葡萄牙 351" : {
+
+    },
+    "蒙古 976" : {
+
+    },
+    "蒙特塞拉特岛 1664" : {
+
+    },
     "行为" : {
+
+    },
+    "西班牙 34" : {
 
     },
     "要使用动态小尾巴吗?" : {
@@ -9401,7 +9766,19 @@
     "请求在线支持 (Beta)" : {
 
     },
+    "诺福克岛 672" : {
+
+    },
     "调试构建" : {
+
+    },
+    "贝宁 229" : {
+
+    },
+    "赞比亚 260" : {
+
+    },
+    "赤道几内亚 240" : {
 
     },
     "超大" : {
@@ -9436,6 +9813,9 @@
         }
       }
     },
+    "越南 84" : {
+
+    },
     "辅助功能" : {
 
     },
@@ -9443,6 +9823,9 @@
 
     },
     "过时的 watchOS" : {
+
+    },
+    "迪戈加西亚岛 246" : {
 
     },
     "退出 App" : {
@@ -9527,10 +9910,16 @@
     "键盘" : {
 
     },
+    "阿森松岛 247" : {
+
+    },
     "降低亮度" : {
 
     },
     "隐私与安全性" : {
+
+    },
+    "韩国 82" : {
 
     },
     "顶部" : {
@@ -9564,6 +9953,39 @@
           }
         }
       }
+    },
+    "马其顿 389" : {
+
+    },
+    "马尔代夫 960" : {
+
+    },
+    "马拉维 265" : {
+
+    },
+    "马提尼克岛 596" : {
+
+    },
+    "马来西亚 60" : {
+
+    },
+    "马歇尔岛 692" : {
+
+    },
+    "马耳他 356" : {
+
+    },
+    "马达加斯加 261" : {
+
+    },
+    "马里 223" : {
+
+    },
+    "马里亚纳岛 1670" : {
+
+    },
+    "墨西哥 52" : {
+
     },
     "" : {
 
