将切换账号功能入口移动到设置内，并且修复在非watchOS设备上不可用 (#377)
* fix bug that settings not dislpayed on non-watchOS devices.

* Update project Number

* Update Project Number

* Localizable

* Move Switch account to settings

* move switch account to settings

* Localizable

* Update Project Number

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -8337,6 +8337,9 @@
     "分析与改进" : {
 
     },
+    "切换账号" : {
+
+    },
     "列表视图" : {
 
     },
@@ -9832,6 +9835,9 @@
 
     },
     "退出播放" : {
+
+    },
+    "退出登录" : {
 
     },
     "选择图片" : {
