--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -522,6 +522,426 @@
         }
       }
     },
+    "🇦🇨 阿森松岛 247" : {
+
+    },
+    "🇦🇲 亚美尼亚 374" : {
+
+    },
+    "🇦🇺 澳大利亚 61" : {
+
+    },
+    "🇧🇦 波黑 387" : {
+
+    },
+    "🇧🇩 孟加拉国 880" : {
+
+    },
+    "🇧🇪 比利时 32" : {
+
+    },
+    "🇧🇫 布基纳法索 226" : {
+
+    },
+    "🇧🇬 保加利亚 359" : {
+
+    },
+    "🇧🇮 布隆迪 257" : {
+
+    },
+    "🇧🇯 贝宁 229" : {
+
+    },
+    "🇧🇳 文莱 673" : {
+
+    },
+    "🇧🇴 玻利维亚 591" : {
+
+    },
+    "🇧🇹 不丹 975" : {
+
+    },
+    "🇧🇼 博茨瓦纳 267" : {
+
+    },
+    "🇧🇿 伯利兹 501" : {
+
+    },
+    "🇨🇦 加拿大 1" : {
+
+    },
+    "🇨🇭 瑞士 41" : {
+
+    },
+    "🇨🇮 科特迪瓦 225" : {
+
+    },
+    "🇨🇱 智利 56" : {
+
+    },
+    "🇨🇳 中国大陆 86" : {
+
+    },
+    "🇨🇾 塞浦路斯 357" : {
+
+    },
+    "🇩🇪 德国 49" : {
+
+    },
+    "🇩🇬 迪戈加西亚岛 246" : {
+
+    },
+    "🇩🇰 丹麦 45" : {
+
+    },
+    "🇩🇲 多米尼加 1767" : {
+
+    },
+    "🇩🇲 多米尼加代表 1809" : {
+
+    },
+    "🇪🇨 厄瓜多尔 593" : {
+
+    },
+    "🇪🇷 厄立特里亚 291" : {
+
+    },
+    "🇪🇸 西班牙 34" : {
+
+    },
+    "🇫🇲 密克罗尼西亚 691" : {
+
+    },
+    "🇫🇴 法罗岛 298" : {
+
+    },
+    "🇫🇷 法国 33" : {
+
+    },
+    "🇬🇧 英国 44" : {
+
+    },
+    "🇬🇪 格鲁吉亚 995" : {
+
+    },
+    "🇬🇫 法属圭亚那 594" : {
+
+    },
+    "🇬🇮 直布罗陀 350" : {
+
+    },
+    "🇬🇶 赤道几内亚 240" : {
+
+    },
+    "🇬🇷 希腊 30" : {
+
+    },
+    "🇭🇰 中国香港特别行政区 852" : {
+
+    },
+    "🇭🇺 匈牙利 36" : {
+
+    },
+    "🇮🇩 印尼 62" : {
+
+    },
+    "🇮🇱 以色列 972" : {
+
+    },
+    "🇮🇳 印度 91" : {
+
+    },
+    "🇮🇶 伊拉克 964" : {
+
+    },
+    "🇮🇷 伊朗 98" : {
+
+    },
+    "🇮🇸 冰岛 354" : {
+
+    },
+    "🇮🇹 意大利 39" : {
+
+    },
+    "🇯🇲 牙买加 1876" : {
+
+    },
+    "🇯🇴 约旦 962" : {
+
+    },
+    "🇯🇵 日本 81" : {
+
+    },
+    "🇰🇷 韩国 82" : {
+
+    },
+    "🇱🇨 圣卢西亚 1784" : {
+
+    },
+    "🇱🇰 斯里兰卡 94" : {
+
+    },
+    "🇲🇦 摩洛哥 212" : {
+
+    },
+    "🇲🇨 摩纳哥 377" : {
+
+    },
+    "🇲🇩 摩尔多瓦 373" : {
+
+    },
+    "🇲🇬 马达加斯加 261" : {
+
+    },
+    "🇲🇭 马歇尔岛 692" : {
+
+    },
+    "🇲🇰 马其顿 389" : {
+
+    },
+    "🇲🇱 马里 223" : {
+
+    },
+    "🇲🇲 缅甸 95" : {
+
+    },
+    "🇲🇳 蒙古 976" : {
+
+    },
+    "🇲🇴 中国澳门特别行政区 853" : {
+
+    },
+    "🇲🇵 马里亚纳岛 1670" : {
+
+    },
+    "🇲🇶 马提尼克岛 596" : {
+
+    },
+    "🇲🇷 毛里塔尼亚 222" : {
+
+    },
+    "🇲🇸 蒙特塞拉特岛 1664" : {
+
+    },
+    "🇲🇹 马耳他 356" : {
+
+    },
+    "🇲🇺 毛里求斯 230" : {
+
+    },
+    "🇲🇻 马尔代夫 960" : {
+
+    },
+    "🇲🇼 马拉维 265" : {
+
+    },
+    "🇲🇽 墨西哥 52" : {
+
+    },
+    "🇲🇾 马来西亚 60" : {
+
+    },
+    "🇲🇿 莫桑比克 258" : {
+
+    },
+    "🇳🇦 纳米比亚 264" : {
+
+    },
+    "🇳🇪 尼日尔 227" : {
+
+    },
+    "🇳🇫 诺福克岛 672" : {
+
+    },
+    "🇳🇬 尼日利亚 234" : {
+
+    },
+    "🇳🇮 尼加拉瓜 505" : {
+
+    },
+    "🇳🇴 挪威 47" : {
+
+    },
+    "🇳🇵 尼泊尔 977" : {
+
+    },
+    "🇳🇷 瑙鲁 674" : {
+
+    },
+    "🇳🇺 纽埃岛 683" : {
+
+    },
+    "🇳🇿 新西兰 64" : {
+
+    },
+    "🇵🇪 秘鲁 51" : {
+
+    },
+    "🇵🇫 法属波利尼西亚 689" : {
+
+    },
+    "🇵🇱 波兰 48" : {
+
+    },
+    "🇵🇲 圣皮埃尔和密克隆群岛 508" : {
+
+    },
+    "🇵🇷 波多黎各 1787" : {
+
+    },
+    "🇵🇹 葡萄牙 351" : {
+
+    },
+    "🇵🇼 帕劳 680" : {
+
+    },
+    "🇷🇸 塞尔维亚 381" : {
+
+    },
+    "🇷🇺 俄罗斯 7" : {
+
+    },
+    "🇸🇦 沙特阿拉伯 966" : {
+
+    },
+    "🇸🇧 所罗门群岛 677" : {
+
+    },
+    "🇸🇨 塞舌尔共和国 248" : {
+
+    },
+    "🇸🇩 苏丹 249" : {
+
+    },
+    "🇸🇪 瑞典 46" : {
+
+    },
+    "🇸🇬 新加坡 65" : {
+
+    },
+    "🇸🇮 斯洛文尼亚 386" : {
+
+    },
+    "🇸🇰 斯洛伐克 421" : {
+
+    },
+    "🇸🇱 塞拉利昂 232" : {
+
+    },
+    "🇸🇲 圣马力诺 378" : {
+
+    },
+    "🇸🇳 塞内加尔 221" : {
+
+    },
+    "🇸🇴 索马里 252" : {
+
+    },
+    "🇸🇷 苏里南 597" : {
+
+    },
+    "🇸🇹 圣多美和普林西比 239" : {
+
+    },
+    "🇸🇻 萨尔瓦多 503" : {
+
+    },
+    "🇸🇾 叙利亚 963" : {
+
+    },
+    "🇸🇿 斯威士兰 268" : {
+
+    },
+    "🇹🇨 特克斯和凯科斯 1649" : {
+
+    },
+    "🇹🇩 乍得 235" : {
+
+    },
+    "🇹🇬 多哥 228" : {
+
+    },
+    "🇹🇭 泰国 66" : {
+
+    },
+    "🇹🇰 托克劳岛 690" : {
+
+    },
+    "🇹🇲 土库曼斯坦 993" : {
+
+    },
+    "🇹🇳 突尼斯 216" : {
+
+    },
+    "🇹🇴 汤加 676" : {
+
+    },
+    "🇹🇷 土耳其 90" : {
+
+    },
+    "🇹🇹 特立尼达和多巴哥 1868" : {
+
+    },
+    "🇹🇻 图瓦卢 688" : {
+
+    },
+    "🇹🇼 中国台湾 886" : {
+
+    },
+    "🇹🇿 坦桑尼亚 255" : {
+
+    },
+    "🇹🇿 桑给巴尔岛 259" : {
+
+    },
+    "🇺🇦 乌克兰 380" : {
+
+    },
+    "🇺🇬 乌干达 256" : {
+
+    },
+    "🇺🇸 美国 1" : {
+
+    },
+    "🇺🇾 乌拉圭 598" : {
+
+    },
+    "🇺🇿 乌兹别克斯坦 998" : {
+
+    },
+    "🇻🇪 委内瑞拉 58" : {
+
+    },
+    "🇻🇬 维珍群岛(英属) 1284" : {
+
+    },
+    "🇻🇮 维珍群岛(美属) 1340" : {
+
+    },
+    "🇻🇳 越南 84" : {
+
+    },
+    "🇻🇺 瓦努阿图 678" : {
+
+    },
+    "🇼🇫 瓦利斯群岛和富图纳群岛 1681" : {
+
+    },
+    "🇼🇸 萨摩亚，东部 684" : {
+
+    },
+    "🇼🇸 萨摩亚，西部 685" : {
+
+    },
+    "🇾🇪 也门 967" : {
+
+    },
+    "🇿🇦 南非 27" : {
+
+    },
+    "🇿🇲 赞比亚 260" : {
+
+    },
     "🎂" : {
 
     },
@@ -8158,43 +8578,7 @@
     "下一步" : {
 
     },
-    "不丹 975" : {
-
-    },
     "不支持全键盘的 Apple Watch 可通过打开此开关以使用第三方的全键盘" : {
-
-    },
-    "中国台湾 886" : {
-
-    },
-    "中国大陆 86" : {
-
-    },
-    "中国澳门特别行政区 853" : {
-
-    },
-    "中国香港特别行政区 852" : {
-
-    },
-    "丹麦 45" : {
-
-    },
-    "乌克兰 380" : {
-
-    },
-    "乌兹别克斯坦 998" : {
-
-    },
-    "乌干达 256" : {
-
-    },
-    "乌拉圭 598" : {
-
-    },
-    "乍得 235" : {
-
-    },
-    "也门 967" : {
 
     },
     "二维码名片" : {
@@ -8220,9 +8604,6 @@
       }
     },
     "互联网" : {
-
-    },
-    "亚美尼亚 374" : {
 
     },
     "什么都木有" : {
@@ -8263,18 +8644,6 @@
         }
       }
     },
-    "以色列 972" : {
-
-    },
-    "伊拉克 964" : {
-
-    },
-    "伊朗 98" : {
-
-    },
-    "伯利兹 501" : {
-
-    },
     "使用“相机”App" : {
 
     },
@@ -8282,12 +8651,6 @@
 
     },
     "使用第三方全键盘" : {
-
-    },
-    "俄罗斯 7" : {
-
-    },
-    "保加利亚 359" : {
 
     },
     "停止支持后，将不再为此版本系统提供功能性更新" : {
@@ -8331,9 +8694,6 @@
         }
       }
     },
-    "冰岛 354" : {
-
-    },
     "分析与改进" : {
 
     },
@@ -8341,9 +8701,6 @@
 
     },
     "列表视图" : {
-
-    },
-    "加拿大 1" : {
 
     },
     "加载更多" : {
@@ -8430,27 +8787,6 @@
           }
         }
       }
-    },
-    "匈牙利 36" : {
-
-    },
-    "南非 27" : {
-
-    },
-    "博茨瓦纳 267" : {
-
-    },
-    "印尼 62" : {
-
-    },
-    "印度 91" : {
-
-    },
-    "厄瓜多尔 593" : {
-
-    },
-    "厄立特里亚 291" : {
-
     },
     "历史记录" : {
       "localizations" : {
@@ -8549,9 +8885,6 @@
     "发送评论" : {
 
     },
-    "叙利亚 963" : {
-
-    },
     "可选, 最多9个" : {
       "localizations" : {
         "en" : {
@@ -8627,27 +8960,6 @@
     "回复内容" : {
 
     },
-    "图瓦卢 688" : {
-
-    },
-    "土库曼斯坦 993" : {
-
-    },
-    "土耳其 90" : {
-
-    },
-    "圣卢西亚 1784" : {
-
-    },
-    "圣多美和普林西比 239" : {
-
-    },
-    "圣皮埃尔和密克隆群岛 508" : {
-
-    },
-    "圣马力诺 378" : {
-
-    },
     "在App内反馈" : {
 
     },
@@ -8692,25 +9004,7 @@
     "在搜索页显示热搜" : {
 
     },
-    "坦桑尼亚 255" : {
-
-    },
     "垂下手腕时隐藏内容" : {
-
-    },
-    "塞内加尔 221" : {
-
-    },
-    "塞尔维亚 381" : {
-
-    },
-    "塞拉利昂 232" : {
-
-    },
-    "塞浦路斯 357" : {
-
-    },
-    "塞舌尔共和国 248" : {
 
     },
     "声音与触感" : {
@@ -8732,15 +9026,6 @@
           }
         }
       }
-    },
-    "多哥 228" : {
-
-    },
-    "多米尼加 1767" : {
-
-    },
-    "多米尼加代表 1809" : {
-
     },
     "大" : {
       "localizations" : {
@@ -8764,9 +9049,6 @@
     "如不希望显示来自 Darock 的推荐，可前往%@关闭" : {
 
     },
-    "委内瑞拉 58" : {
-
-    },
     "媒体" : {
 
     },
@@ -8786,13 +9068,7 @@
         }
       }
     },
-    "孟加拉国 880" : {
-
-    },
     "完成" : {
-
-    },
-    "密克罗尼西亚 691" : {
 
     },
     "密码" : {
@@ -8834,18 +9110,6 @@
         }
       }
     },
-    "尼加拉瓜 505" : {
-
-    },
-    "尼日利亚 234" : {
-
-    },
-    "尼日尔 227" : {
-
-    },
-    "尼泊尔 977" : {
-
-    },
     "已使用 %@ MB" : {
 
     },
@@ -8870,18 +9134,6 @@
           }
         }
       }
-    },
-    "布基纳法索 226" : {
-
-    },
-    "布隆迪 257" : {
-
-    },
-    "希腊 30" : {
-
-    },
-    "帕劳 680" : {
-
     },
     "应用" : {
       "localizations" : {
@@ -8963,9 +9215,6 @@
         }
       }
     },
-    "德国 49" : {
-
-    },
     "快进 10 秒" : {
 
     },
@@ -9016,9 +9265,6 @@
     "您的 Apple Watch 运行的 watchOS 已过时，喵哩喵哩将在 2024/6/10 之后停止支持" : {
 
     },
-    "意大利 39" : {
-
-    },
     "我的收藏" : {
       "localizations" : {
         "en" : {
@@ -9044,9 +9290,6 @@
     "所有历史记录" : {
 
     },
-    "所罗门群岛 677" : {
-
-    },
     "手记建议" : {
       "extractionState" : "stale",
       "localizations" : {
@@ -9058,13 +9301,7 @@
         }
       }
     },
-    "托克劳岛 690" : {
-
-    },
     "扩展的触感反馈" : {
-
-    },
-    "挪威 47" : {
 
     },
     "推荐" : {
@@ -9096,15 +9333,6 @@
 
     },
     "搜索" : {
-
-    },
-    "摩尔多瓦 373" : {
-
-    },
-    "摩洛哥 212" : {
-
-    },
-    "摩纳哥 377" : {
 
     },
     "播放" : {
@@ -9149,31 +9377,7 @@
         }
       }
     },
-    "文莱 673" : {
-
-    },
-    "斯威士兰 268" : {
-
-    },
-    "斯洛伐克 421" : {
-
-    },
-    "斯洛文尼亚 386" : {
-
-    },
-    "斯里兰卡 94" : {
-
-    },
-    "新加坡 65" : {
-
-    },
     "新建反馈" : {
-
-    },
-    "新西兰 64" : {
-
-    },
-    "日本 81" : {
 
     },
     "昨天和今天" : {
@@ -9264,9 +9468,6 @@
         }
       }
     },
-    "智利 56" : {
-
-    },
     "暂停->退出" : {
 
     },
@@ -9327,12 +9528,6 @@
     "标题" : {
 
     },
-    "格鲁吉亚 995" : {
-
-    },
-    "桑给巴尔岛 259" : {
-
-    },
     "模式" : {
       "localizations" : {
         "en" : {
@@ -9363,45 +9558,6 @@
 
     },
     "正常" : {
-
-    },
-    "比利时 32" : {
-
-    },
-    "毛里塔尼亚 222" : {
-
-    },
-    "毛里求斯 230" : {
-
-    },
-    "汤加 676" : {
-
-    },
-    "沙特阿拉伯 966" : {
-
-    },
-    "法国 33" : {
-
-    },
-    "法属圭亚那 594" : {
-
-    },
-    "法属波利尼西亚 689" : {
-
-    },
-    "法罗岛 298" : {
-
-    },
-    "波兰 48" : {
-
-    },
-    "波多黎各 1787" : {
-
-    },
-    "波黑 387" : {
-
-    },
-    "泰国 66" : {
 
     },
     "清除历史记录" : {
@@ -9435,40 +9591,10 @@
     "清除缓存" : {
 
     },
-    "澳大利亚 61" : {
-
-    },
     "热搜" : {
 
     },
-    "牙买加 1876" : {
-
-    },
-    "特克斯和凯科斯 1649" : {
-
-    },
-    "特立尼达和多巴哥 1868" : {
-
-    },
     "状态" : {
-
-    },
-    "玻利维亚 591" : {
-
-    },
-    "瑙鲁 674" : {
-
-    },
-    "瑞典 46" : {
-
-    },
-    "瑞士 41" : {
-
-    },
-    "瓦利斯群岛和富图纳群岛 1681" : {
-
-    },
-    "瓦努阿图 678" : {
 
     },
     "生日快乐，%@！" : {
@@ -9489,9 +9615,6 @@
           }
         }
       }
-    },
-    "直布罗陀 350" : {
-
     },
     "离线缓存" : {
       "localizations" : {
@@ -9514,12 +9637,6 @@
           }
         }
       }
-    },
-    "科特迪瓦 225" : {
-
-    },
-    "秘鲁 51" : {
-
     },
     "稍后再看" : {
       "localizations" : {
@@ -9559,9 +9676,6 @@
         }
       }
     },
-    "突尼斯 216" : {
-
-    },
     "简洁地描述问题" : {
 
     },
@@ -9569,18 +9683,6 @@
 
     },
     "粉丝列表" : {
-
-    },
-    "索马里 252" : {
-
-    },
-    "约旦 962" : {
-
-    },
-    "纳米比亚 264" : {
-
-    },
-    "纽埃岛 683" : {
 
     },
     "经验" : {
@@ -9605,58 +9707,13 @@
         }
       }
     },
-    "维珍群岛(美属) 1340" : {
-
-    },
-    "维珍群岛(英属) 1284" : {
-
-    },
-    "缅甸 95" : {
-
-    },
     "缓存数据" : {
 
     },
     "编辑" : {
 
     },
-    "美国 1" : {
-
-    },
-    "苏丹 249" : {
-
-    },
-    "苏里南 597" : {
-
-    },
-    "英国 44" : {
-
-    },
-    "莫桑比克 258" : {
-
-    },
-    "萨尔瓦多 503" : {
-
-    },
-    "萨摩亚，东部 684" : {
-
-    },
-    "萨摩亚，西部 685" : {
-
-    },
-    "葡萄牙 351" : {
-
-    },
-    "蒙古 976" : {
-
-    },
-    "蒙特塞拉特岛 1664" : {
-
-    },
     "行为" : {
-
-    },
-    "西班牙 34" : {
 
     },
     "要使用动态小尾巴吗?" : {
@@ -9769,19 +9826,7 @@
     "请求在线支持 (Beta)" : {
 
     },
-    "诺福克岛 672" : {
-
-    },
     "调试构建" : {
-
-    },
-    "贝宁 229" : {
-
-    },
-    "赞比亚 260" : {
-
-    },
-    "赤道几内亚 240" : {
 
     },
     "超大" : {
@@ -9816,9 +9861,6 @@
         }
       }
     },
-    "越南 84" : {
-
-    },
     "辅助功能" : {
 
     },
@@ -9826,9 +9868,6 @@
 
     },
     "过时的 watchOS" : {
-
-    },
-    "迪戈加西亚岛 246" : {
 
     },
     "退出 App" : {
@@ -9916,16 +9955,10 @@
     "键盘" : {
 
     },
-    "阿森松岛 247" : {
-
-    },
     "降低亮度" : {
 
     },
     "隐私与安全性" : {
-
-    },
-    "韩国 82" : {
 
     },
     "顶部" : {
@@ -9959,39 +9992,6 @@
           }
         }
       }
-    },
-    "马其顿 389" : {
-
-    },
-    "马尔代夫 960" : {
-
-    },
-    "马拉维 265" : {
-
-    },
-    "马提尼克岛 596" : {
-
-    },
-    "马来西亚 60" : {
-
-    },
-    "马歇尔岛 692" : {
-
-    },
-    "马耳他 356" : {
-
-    },
-    "马达加斯加 261" : {
-
-    },
-    "马里 223" : {
-
-    },
-    "马里亚纳岛 1670" : {
-
-    },
-    "墨西哥 52" : {
-
     },
     "" : {
 
