网络检查增加ProgressView()动画 (#378)

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -2696,6 +2696,7 @@
       }
     },
     "Feedback.continue-on-other-device" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "variations" : {
@@ -8646,9 +8647,6 @@
 
     },
     "圣马力诺 378" : {
-
-    },
-    "在App内反馈" : {
 
     },
     "在iPhone上继续" : {
