--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -636,7 +636,7 @@
     "🇬🇷 希腊 30" : {
 
     },
-    "🇭🇰 中国香港特别行政区 852" : {
+    "🇭🇰 中国香港 852" : {
 
     },
     "🇭🇺 匈牙利 36" : {
@@ -708,7 +708,7 @@
     "🇲🇳 蒙古 976" : {
 
     },
-    "🇲🇴 中国澳门特别行政区 853" : {
+    "🇲🇴 中国澳门 853" : {
 
     },
     "🇲🇵 马里亚纳岛 1670" : {
@@ -886,7 +886,14 @@
 
     },
     "🇹🇼 中国台湾 886" : {
-
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "TW 中国台湾 886"
+          }
+        }
+      }
     },
     "🇹🇿 坦桑尼亚 255" : {
 
@@ -8959,31 +8966,6 @@
 
     },
     "回复内容" : {
-
-    },
-    
-    "图瓦卢 688" : {
-
-    },
-    "土库曼斯坦 993" : {
-
-    },
-    "土耳其 90" : {
-
-    },
-    "圣卢西亚 1784" : {
-
-    },
-    "圣多美和普林西比 239" : {
-
-    },
-    "圣皮埃尔和密克隆群岛 508" : {
-
-    },
-    "圣马力诺 378" : {
-    
-    },
-    "在App内反馈" : {
 
     },
     "在iPhone上继续" : {
