--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -890,7 +890,7 @@
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "TW 中国台湾 886"
+            "value" : "中国台湾 886"
           }
         }
       }
