简体中文不会显示台湾旗帜，显示“TW” (#380)

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -636,7 +636,7 @@
     "🇬🇷 希腊 30" : {
 
     },
-    "🇭🇰 中国香港特别行政区 852" : {
+    "🇭🇰 中国香港 852" : {
 
     },
     "🇭🇺 匈牙利 36" : {
@@ -708,7 +708,7 @@
     "🇲🇳 蒙古 976" : {
 
     },
-    "🇲🇴 中国澳门特别行政区 853" : {
+    "🇲🇴 中国澳门 853" : {
 
     },
     "🇲🇵 马里亚纳岛 1670" : {
@@ -886,7 +886,14 @@
 
     },
     "🇹🇼 中国台湾 886" : {
-
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "中国台湾 886"
+          }
+        }
+      }
     },
     "🇹🇿 坦桑尼亚 255" : {
 
